<resources>
    <string name="app_name">BlogApp</string>
    <string name="logo">login page</string>
    <string name="login_Email">Your Email</string>
    <string name="login_Password">Password</string>
    <string name="Log_Button">LOGIN TO ACCOUNT</string>
    <string name="createaccount_Button">NEED A NEW ACCOUNT</string>
    <string name="action_searchS">search</string>
    <string name="Action_Settings">Setting</string>
    <string name="Action_LogOut">LogOut</string>
    <string name="Reg_Confirm_Password">Confirm Password</string>
    <string name="Reg_already_account">Already Have Account!</string>
    <string name="Reg_Create_Account">Create a New Account</string>
    <string name="SetUpUser_Name">Your Name</string>
    <string name="setUpAccount_Button">Save Account Setting</string>
    <string name="EditTExt_addPost_Description">Description.....</string>
    <string name="newPostButton">Post Blog</string>
    <string name="bottom_home_text">Home</string>
    <string name="bottom_notification_text">Notification</string>
    <string name="bottom_account_text">Account</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_commnts">commnts</string>
    <string name="edit_icon">edit</string>
    <string name="delete_icon">delete</string>
    <string name="Blog">Blog</string>
    <string name="blog_text">You read a book! let’s discus …</string>
    <string name="logIn">Log in</string>
    <string name="login">Log in</string>
    <string name="loginbtn">Log in</string>
    <string name="Posts">My Post</string>
</resources>
